--- a/cloud-config-client.yml
+++ b/cloud-config-client.yml
@@ -1,7 +1,8 @@
-spring: 
+﻿spring: 
   profiles:
     active:
     - dev
+
 ---
 server:
   port: 8201
@@ -15,6 +16,7 @@ eureka:
   client:
     service-url:
       defalutZone: http://eureka-dev.com:7001/eureka/
+
 ---
 server:
   port: 8202
